# Fleet-Management

./: .pre-commit-config.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4f5a7d2b1c3e_drop_company_code.py  8a26332e5530_initial_schema.py  e8907e5318dc_clean_migration.py
app/: db.py  main.py
app/api/: alert.py  company.py  driving_history.py  telemetry.py  user.py  vehicle.py  vehicle_settings.py
app/core/: config.py
app/crud/: alert.py  company.py  driving_history.py  telemetry.py  user.py  vehicle.py  vehicle_settings.py
app/models/: __init__.py  alert.py  company.py  driving_history.py  telemetry.py  user.py  vehicle.py  vehicle_settings.py
app/schemas/: alert.py  company.py  driving_history.py  telemetry.py  user.py  vehicle.py  vehicle_settings.py
docs/: db design.txt  learn.txt  test.py
